# so-challenge

./: README.md  dummy_cache.csv  pyproject.toml  so_questions_cache.csv
diary/: 001-project-setup.md  002-requirements-specification.md  003-data-fetcher-tests.md  004-data-fetcher-implementation.md  005-plotter-tests.md  006-plotter-implementation.md  007-milestones-tests.md  008-milestones-implementation.md  009-main-integration.md  010-fixing-api-call.md  011-improving-data-fetching.md  012-real-api-historical-data.md
docs/: requirements.md
src/so_challenge/: __init__.py  data_fetcher.py  main.py  milestones.py  plotter.py
tests/: test_data_fetcher.py  test_milestones.py  test_plotter.py
